# TaxoPics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: windeployqt.cmake
src/: CMakeLists.txt  main.cpp
